fea: Se continua con migración a microstream iniciando cambio de EJB y Queries.